delete endpoint progress
